[package]
name = "server-env-config"
version = "0.1.1"
edition = "2021"
description = "Util types and functions to quickly and easy set up an HTTP server from environment variables"
license = "MIT OR Apache-2.0"
authors = [
    "Mariano Ruiz <mrsarm@gmail.com>",
]
readme = "README.md"
homepage = "https://github.com/mrsarm/rust-server-env-config"
repository = "https://github.com/mrsarm/rust-server-env-config"
categories = ["config", "data-structures", "settings", "env", "environment"]
exclude = [
    ".github/workflows/",
    ".gitignore",
    ".editorconfig",
]

[dependencies]
anyhow = "1.0"
log = "0.4"
strum = "0.25"
strum_macros = "0.25"
